objects/Performing_Choir__c.object
<CustomObject>
    <description>This object is a junction object to store the relationship between an event (campaign) and a choir (account).

This junction object allows a choir to be performing at more than one event when relevant (VSA-36).</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the look-up to the campaign (event) which the choir will be performing at (VSA-36).</description>
        <inlineHelpText>The event which the choir will be performing at.</inlineHelpText>
        <label>Campaign</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Campaign.RecordType.Name</field>
                <operation>equals</operation>
                <value>VSA Campaign</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Performing Choirs</relationshipLabel>
        <relationshipName>Choirs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field contains a description of the choir&apos;s specific needs related to a particular music event (VSA-36).</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Performing_Choir__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the look-up to the choir (account) which will be performing at the event (VSA-36).</description>
        <inlineHelpText>The choir which will be performing at the event.</inlineHelpText>
        <label>Performing Choir</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Performing at Events</relationshipLabel>
        <relationshipName>Performing_Choirs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Performing Choir</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>Performing Choir Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performing Choirs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>